--- a/pom.xml
+++ b/pom.xml
@@ -26,23 +26,13 @@
                 </configuration>
             </plugin>
 
-            <!--maven plugin to execute program using command "mvn exec:java" -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.3.2</version>
-                <configuration>
-                    <mainClass>com.ita.main.Main</mainClass>
-                </configuration>
-            </plugin>
-
             <!-- plugin to create distributions -->
             <plugin>
                 <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>8.1.2</version>
                 <configuration>
-                    <mainClass>com.ita.main.Main</mainClass>
+                    <mainClass>com.ita.Main</mainClass>
                     <jfxMainAppJarName>MediaPlayerFX.jar</jfxMainAppJarName>
                 </configuration>
             </plugin>
